--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -95,6 +95,7 @@ android {
 
     namespace "com.projetodsm"
     defaultConfig {
+        manifestPlaceholders = [API_KEY:"${System.getenv("API_KEY")}"]
         applicationId "com.projetodsm"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
